Fix layout issues

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,9 +9,17 @@ body {
     background: linear-gradient(to bottom, rgba(33, 1, 36, 1) 0%, rgba(33, 1, 36, 0.9) 100%);
     background-size: cover;
     height: 100vh;
+}
+
+.container {
+    box-sizing: content-box;
+    width: 1160px;
+    height: 100%;
+    margin: 0 auto;
+    padding: 0 2em;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .game {
